deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: react-app-deployment
  namespace: react-app-ns
  labels:
    app: react-app
    

# Specification for the deployment
spec:
  replicas: 2
  selector:    
    matchLabels:
      app: react-app

  template:
    metadata:
      labels:
        app: react-app
    
    spec: 
      containers:
      - name: react-app-container
        image: react-app-image    
        imagePullPolicy: IfNotPresent
        ports:        
        - containerPort: 80
