service.yaml
apiVersion: v1
kind: Service

metadata:
  name: react-app-service
  namespace: react-app-ns

spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP      
      port: 3000       
      targetPort: 80
