ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: react-app-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # Defining the rules
  rules:
    # The app host
    - host: app.test.local
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: react-app-service
              port:
                number: 3000
